--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GithubUsersSearch</string>
+    <string name="default_github_user">ipaf</string>
+    <string name="search">Search</string>
+    <string name="empty_list">Empty List!</string>
 </resources>
